Bug 1298173 - Remove redundant parameter. r=dvander

The parameter is always true if the tap type is a eSingleTap and false in
all other cases, so it's redundant. As it was added as an optimization in bug
1020199 removing it should be safe.

MozReview-Commit-ID: IPB8BUagQl6