gfx/layers/ipc/APZChild.h
@@ -31,8 +31,7 @@ public:
                      const LayoutDevicePoint& aPoint,
                      const Modifiers& aModifiers,
                      const ScrollableLayerGuid& aGuid,
-                     const uint64_t& aInputBlockId,
-                     const bool& aCallTakeFocusForClickFromTap) override;
+                     const uint64_t& aInputBlockId) override;
 
   bool RecvUpdateOverscrollVelocity(const float& aX, const float& aY, const bool& aIsRootContent) override;
 
